Update cf-expandables; fix retina bg bug

--- a/static/css/beta.less
+++ b/static/css/beta.less
@@ -91,7 +91,7 @@
 
     .respond-to-min(1024px, {
         min-height: 540px;
-        background-size: auto;
+        background-size: 1838px;
     });
 
     @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
