--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -2056,6 +2056,52 @@ input.btn::-moz-focus-inner {
 */
 
 /* topdoc
+    name: JS functions
+    family: cf-expandables
+    notes:
+      - "There are a number of available functions that you can call on
+         .expandable elements."
+    patterns:
+    - name: .toggle()
+      codenotes:
+        - "Toggles the expandable."
+    - name: .expand( duration )
+      codenotes:
+        - "Expands the expandable."
+        - |
+          duration
+          Type: number
+          The animation duration.
+          Not required.
+          Defaults to `$.fn.expandable.calculateExpandDuration` or
+          `$.fn.expandable.calculateCollapseDuration` if excluded.
+    - name: .collapse( duration )
+      codenotes:
+        - "Collapses the expandable."
+        - |
+          duration
+          Type: number
+          The animation duration.
+          Not required.
+          Defaults to `$.fn.expandable.calculateExpandDuration` or
+          `$.fn.expandable.calculateCollapseDuration` if excluded.
+    - name: Example usage
+      codenotes:
+        - |
+          // HTML
+          <div class="expandable" id="my-expandable">...</div>
+
+          // JS
+          // (use .get(0) to get the HTML element, that's what the functions
+          // are bound to)
+          $('#my-expandable').get(0).expand(); // Opens the expandable
+          $('#my-expandable').get(0).collapse(); // Closes the expandable
+          $('#my-expandable').get(0).toggle(); // Toggles the expandable
+    tags:
+    - cf-expandables
+*/
+
+/* topdoc
     name: Barebones expandable
     family: cf-expandables
     notes:
@@ -2130,18 +2176,6 @@ input.btn::-moz-focus-inner {
 .expandable_target:focus {
   outline: 1px dotted #101820;
   outline-offset: 1px;
-}
-
-.expandable_cue-close {
-  display: none;
-}
-
-.expandable__expanded > .expandable_target .expandable_cue-open {
-  display: none;
-}
-
-.expandable__expanded > .expandable_target .expandable_cue-close {
-  display: inline;
 }
 
 .expandable_content:after {
@@ -2224,6 +2258,82 @@ input.btn::-moz-focus-inner {
 .lt-ie9 .expandable_link strong,
 .lt-ie9 .expandable_link b {
   font-weight: normal !important;
+}
+
+/* topdoc
+    name: Animated cues
+    family: cf-expandables
+    patterns:
+    - name: .expandable_cue-open/close__animated (modifier)
+      codenotes:
+        - |
+          .expandable_cue-open__animated
+          .expandable_cue-close__animated
+      markup: |
+        <div class="expandable">
+            <button class="expandable_target">
+                <span class="expandable_cue-open expandable_cue-open__animated">
+                    <span class="cf-icon cf-icon-down"></span>
+                </span>
+                <span class="expandable_cue-close expandable_cue-close__animated">
+                    <span class="cf-icon cf-icon-up"></span>
+                </span>
+            </button>
+            <div class="expandable_content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Neque ipsa voluptatibus soluta nobis unde quisquam
+                    temporibus magnam debitis quidem. Ducimus ratione
+                    corporis nesciunt earum vel est quaerat blanditiis
+                    dolore ipsa?
+                </p>
+            </div>
+        </div>
+        <div class="expandable expandable__expanded">
+            <button class="expandable_target">
+                <span class="expandable_cue-open expandable_cue-open__animated">
+                    <span class="cf-icon cf-icon-down"></span>
+                </span>
+                <span class="expandable_cue-close expandable_cue-close__animated">
+                    <span class="cf-icon cf-icon-up"></span>
+                </span>
+            </button>
+            <div class="expandable_content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Neque ipsa voluptatibus soluta nobis unde quisquam
+                    temporibus magnam debitis quidem. Ducimus ratione
+                    corporis nesciunt earum vel est quaerat blanditiis
+                    dolore ipsa?
+                </p>
+            </div>
+        </div>
+    tags:
+    - cf-expandables
+*/
+
+.expandable_cue-open__animated,
+.expandable_cue-close__animated {
+  -webkit-transition: 0.25s -webkit-transform;
+  transition: 0.25s transform;
+}
+
+.expandable_cue-close__animated {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.expandable__expanded .expandable_cue-close__animated {
+  -webkit-transform: rotate(0);
+  -ms-transform: rotate(0);
+  transform: rotate(0);
+}
+
+.expandable__expanded .expandable_cue-open__animated {
+  -webkit-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 
 /* topdoc
