--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -128,7 +128,7 @@
 {# ==========================================================================
    filters()
 
-   Create an expandble of post filters when given:
+   Create an expandable of post filters when given:
 
    label:       The label you want on the expandable button
    query:       The post type query object like `queries.posts`.
