Comment formatting update.

--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -340,6 +340,11 @@
         <label class="form-l_col-2-3 form-label-header">
             Date range
         </label>
+        <!--
+            =================
+            "From" date input
+            =================
+        -->
         <!-- No-JS date input -->
         {% set from_date = selected_filters_for_field('range_date_gte')[0] %}
         <div class="form-l_col-1-3"
