--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -58,13 +58,13 @@
         <a href="/">
             <img class="header_logo u-js-only"
                  src="/static/img/logo_smex.svg"
-                 onerror="this.onerror=null;this.src='/static/img/logo_smex.png';"
+                 onerror="this.onerror=null;this.src='/static/img/logo_sm-exec.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="237"
                  height="50">
             <noscript>
                 <img class="header_logo logo__no-js"
-                     src="/static/img/logo_smex.png"
+                     src="/static/img/logo_sm-exec.png"
                      alt="Consumer Financial Protection Bureau"
                      width="237"
                      height="50">
