Adds note about jump link and 100% width.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -152,6 +152,7 @@
         border: dotted @pacific;
         border-width: 1px 0;
         margin-right: 0;
+        // 100% width is needed when .jump-link is applied to a <button>.
         width: 100%;
         text-align: left;
 
