--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15676,7 +15676,7 @@ a.focus .summary_header {
     padding: 15px;
     margin: 0;
     position: absolute;
-    top: 0;
+    top: 1px;
     right: 0;
     color: #101820;
     border-color: #101820;
@@ -15728,9 +15728,19 @@ a.focus .summary_header {
     color: #101820;
   }
 }
+@media only all and (max-width: 37.4375em) {
+  .beta-banner_btn {
+    font-size: 1em;
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .beta-banner_btn {
+    right: 15px;
+  }
+}
 @media only all and (min-width: 50.0625em) {
   .beta-banner_btn {
-    top: -11px;
+    top: -12px;
   }
 }
 .beta-hero {
