Rename Watchroom to Top Stories in templates

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -95,10 +95,10 @@
   name: Post previews
   family: cfgov-blog-docs
   patterns:
-    - name: Watchroom
+    - name: Top Stories
       markup: |
-        <article class="watchroom summary">
-            <h1 class="summary_header summary_header__large">Watchroom header</h1>
+        <article class="top-stories summary">
+            <h1 class="summary_header summary_header__large">Top Stories header</h1>
             <div class="summary_cols">
                 <div class="summary_col">
                     <p class="summary_text summary_text__dark">
@@ -144,7 +144,7 @@
         </article>
       codenotes:
         - |
-          .watchroom.summary
+          .top-stories.summary
             .summary__header.summary_header__large
             .summary_cols
               .summary_col
@@ -247,7 +247,7 @@
     - cfgov-blog-docs
 */
 
-.watchroom {
+.top-stories {
     margin-bottom: unit(60px / @base-font-size-px, em);
 }
 
