--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -53,7 +53,7 @@
         <meta property="og:type" content="{% block og_type %}website{% endblock %}">
         <meta property="og:url" content="{{ request.url }}">
         <meta property="og:image"
-              content="http://www.consumerfinance.gov/wp-content/themes/cfpb_nemo/_/img/logo.svg">
+              content="http://beta.consumerfinance.gov/static/img/logo_sm-exec.png">
         <!--   Optional -->
         <meta property="og:description" content="{% block og_desc %}{{ self.desc() }}{% endblock %}">
         <meta property="og:site_name" content="Consumer Financial Protection Bureau">
