--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -156,13 +156,17 @@
 
                         <div class="footer_logo">
                             <img class="logo u-js-only"
-                                 src="/static/img/logo.svg"
-                                 onerror="this.onerror=null;this.src='/static/img/logo.png';"
-                                 alt="Consumer Financial Protection Bureau">
+                                 src="/static/img/logo_sm-exec.svg"
+                                 onerror="this.onerror=null;this.src='/static/img/logo_sm-exec.png';"
+                                 alt="Consumer Financial Protection Bureau"
+                                 width="237"
+                                 height="50">
                             <noscript>
                                 <img class="logo logo__no-js"
-                                     src="/static/img/logo.png"
-                                     alt="Consumer Financial Protection Bureau">
+                                     src="/static/img/logo_sm-exec.png"
+                                     alt="Consumer Financial Protection Bureau"
+                                     width="237"
+                                     height="50">
                             </noscript>
                         </div>
                         <p class="footer_address">
