--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -48,7 +48,7 @@
 
 <div class="sliding-nav_page">
 
-    <header class="header wrapper primary-nav_header-space" role="banner">
+    <header class="header wrapper wrapper__match-content primary-nav_header-space" role="banner">
 
         <button class="sliding-nav_trigger" id="trigger">
             <span class="cf-icon cf-icon-menu"></span>
@@ -57,7 +57,7 @@
 
         <a href="/">
             <img class="header_logo u-js-only"
-                 src="/static/img/logo_smex.svg"
+                 src="/static/img/logo_sm-exec.svg"
                  onerror="this.onerror=null;this.src='/static/img/logo_sm-exec.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="237"
