Integrate cf-layout

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1168,7 +1168,7 @@
     background-color: @gray;
 
     &_wrapper {
-        .wrapper;
+        .wrapper();
     }
 
     // The image container is needed to suppress loading of the images until
