--- a/static/css/main.less
+++ b/static/css/main.less
@@ -89,7 +89,7 @@
    ========================================================================== */
 
 @import (less) "cf-enhancements.less";
-@import (less) "layout.less";
+@import (less) "header.less";
 @import (less) "nav-secondary.less";
 @import (less) "media-object.less";
 @import (less) "meta.less";
