Update header.less docs

--- a/static/css/header.less
+++ b/static/css/header.less
@@ -1,11 +1,11 @@
 /* ==========================================================================
    cfgov-refresh
-   layout
+   header
    ========================================================================== */
 
 /* topdoc
   name: Header
-  family: cfgov-layout
+  family: cfgov-header
   patterns:
     - name: Logo
       markup: |
@@ -44,7 +44,7 @@
            purposes in these docs, because the `.header_misc` div is positioned
            absolutely."
   tags:
-    - cfgov-layout
+    - cfgov-header
 */
 
 .header_logo {
@@ -99,7 +99,7 @@
 
 /* topdoc
   name: Primary navigation
-  family: cfgov-layout
+  family: cfgov-header
   patterns:
     - name: TBD
       markup: |
@@ -107,7 +107,7 @@
       notes:
         - 
   tags:
-    - cfgov-layout
+    - cfgov-header
 */
 
 .primary-nav_top-level-list > .list_item > .list_link {
