--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8829,11 +8829,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 */
 /* ==========================================================================
    cfgov-refresh
-   layout
+   header
    ========================================================================== */
 /* topdoc
   name: Header
-  family: cfgov-layout
+  family: cfgov-header
   patterns:
     - name: Logo
       markup: |
@@ -8872,7 +8872,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
            purposes in these docs, because the `.header_misc` div is positioned
            absolutely."
   tags:
-    - cfgov-layout
+    - cfgov-header
 */
 .header_logo {
   margin: 30px 0 1.25em 0;
@@ -8975,7 +8975,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 /* topdoc
   name: Primary navigation
-  family: cfgov-layout
+  family: cfgov-header
   patterns:
     - name: TBD
       markup: |
@@ -8983,7 +8983,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
       notes:
         - 
   tags:
-    - cfgov-layout
+    - cfgov-header
 */
 .primary-nav_top-level-list > .list_item > .list_link {
   color: #101820;
