--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -4,6 +4,170 @@
    ========================================================================== */
 
 /* topdoc
+  name: Links with icons
+  family: cfgov-misc
+  notes:
+    - "Styles to enable adding an icon to a link and preventing the link's
+       underline from extending under the icon."
+    - "For the underlined icon prevention to work, you must wrap the link text
+       with a `span.icon-link_text`. There can be no whitespace between the text
+       and the opening and closing span tags."
+  patterns:
+    - name: Default link with icon
+      markup: |
+        <p>
+            For more information, email
+            <a class="icon-link icon-link__mail" href="#">
+                <span class="icon-link_text">john.smith@cfpb.gov</span>
+            </a>.
+            Alternatively, you can
+            <a class="icon-link icon-link__download" href="#">
+                <span class="icon-link_text">download the info sheet</span>
+            </a>.
+            Oh, you might also want to visit this
+            <a class="icon-link icon-link__external-link" href="#">
+                <span class="icon-link_text">other organization's website</span>
+            </a> for further details.
+        </p>
+        <a class="icon-link icon-link__right" href="#">
+            Visit another section of our site
+        </a>
+      notes:
+        - "The modifier names match the cf-icon names of commonly-used icons."
+        - "Icons appear to the right of a link, by default."
+    - name: Links with icons on the left (modifier)
+      markup: |
+        <a class="icon-link icon-link__mail icon-link__before" href="#">
+            john.smith@cfpb.gov
+        </a><br>
+        <a class="icon-link icon-link__phone icon-link__before" href="#">
+            (123) 456-7890
+        </a>
+      notes:
+        - "Simply add the `.icon-link__before` modifier to place the icon before
+           the link text."
+        - "You can omit the `span.icon-link_text` wrapper if you do not need
+           an underline on a particular link."
+    - name: Non-wrapping icon links
+      markup: |
+        <p>
+            For more information, email
+            <a class="icon-link icon-link__mail icon-link__no-wrap" href="#">
+                <span class="icon-link_text">john.smith@cfpb.gov</span>
+            </a>.
+        </p>
+      notes:
+        - "Warning: Icons added to inline links can sometimes break onto the
+           next line. If you want to prevent this, you can add the `__no-wrap`
+           modifier to `.icon-link`."
+  tags:
+    - cfgov-misc
+*/
+
+.icon-link {
+    // padding-right: 0.75em;
+    border-bottom-width: 0;
+    // margin-right: 0.375em;
+    // position: relative;
+
+    &_text {
+        border-bottom-width: 1px;
+        border-bottom-style: inherit;
+    }
+
+    &:before,
+    &:after {
+        .cf-icon();
+        margin-right: 1px;
+        margin-left: 1px;
+        // position: absolute;
+        // bottom: 0;
+        // right: 0;
+        // border-bottom: none;
+    }
+
+    &__before {
+        &:after {
+            content: '' !important;
+        }
+        
+        &:before {
+            // padding-right: .25em;
+            // border-bottom: none;
+        }
+    }
+
+    &__download {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-download glyph.
+            content: "\e406";
+        }
+    }
+
+    &__email {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-email glyph.
+            content: "\e302";
+        }
+    }
+
+    &__external-link {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-external-link glyph.
+            content: "\e610";
+        }
+    }
+
+    &__fax {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-fax glyph.
+            content: "\e310";
+        }
+    }
+
+    &__left {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-left glyph.
+            content: "\e000";
+        }
+    }
+
+    &__mail {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-mail glyph.
+            content: "\e304";
+        }
+    }
+
+    &__phone {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-phone glyph.
+            content: "\e306";
+        }
+    }
+
+    &__right {
+        &:after,
+        &.icon-link__before:before {
+            // Inserts the cf-icon-right glyph.
+            content: "\e002";
+        }
+    }
+
+    &__no-wrap {
+        white-space: nowrap;
+    }
+}
+
+
+/* topdoc
   name: Styled link
   family: cfgov-misc
   patterns:
@@ -100,19 +264,7 @@
         font-size: unit(@font-size / @base-font-size-px, em);
     }
 
-    &__download {
-        &:after {
-            // Inserts the cf-icon-download glyph.
-            content: "\e406";
-        }
-    }
 
-    &__external-link {
-        &:after {
-            // Inserts the cf-icon-external-link glyph.
-            content: "\e610";
-        }
-    }
 
     &:after {
         .cf-icon();
